--- a/v2/install/steps/database.twig
+++ b/v2/install/steps/database.twig
@@ -1,12 +1,12 @@
 {% extends 'layout.twig' %}
 
 {% block content %}
-    <center><h5><?= _lang("database_info"); ?></h5></center>
+    <center><h5>{{ _lang("database_info") }}</h5></center>
     <br/>
     <hr/><br/>
     <form method="post" action="" class="form-horizontal row-border">
         <div class="form-group row">
-            <h6 class="col-sm-3"><?= _lang("database_host"); ?>: </h6>
+            <h6 class="col-sm-3">{{ _lang("database_host") }}: </h6>
             <div class="col-sm-8">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -17,7 +17,7 @@
                             name="database_host"
                             class="form-control"
                             placeholder="localhost"
-                            value="<?= $_SESSION['database_host'] ?? $_POST['database_host'] ?? ''; ?>"
+                            value="{{ _SESSION['database_host'] ?? _POST['database_host'] }}"
                             required
                     >
                 </div>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group row">
-            <h6 class="col-sm-3"><?= _lang("database_name"); ?>: </h6>
+            <h6 class="col-sm-3">{{ _lang("database_name") }} : </h6>
             <div class="col-sm-8">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -36,7 +36,7 @@
                             name="database_name"
                             class="form-control"
                             placeholder="security"
-                            value="<?= $_SESSION['database_name'] ?? $_POST['database_name'] ?? ''; ?>"
+                            value="{{ _SESSION['database_name'] ?? _POST['database_name'] }}"
                             required
                     >
                 </div>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="form-group row">
-            <h6 class="col-sm-3"><?= _lang("database_username"); ?>: </h6>
+            <h6 class="col-sm-3">{{  _lang("database_username") }} : </h6>
             <div class="col-sm-8">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -55,7 +55,7 @@
                             name="database_username"
                             class="form-control"
                             placeholder="root"
-                            value="<?= $_SESSION['database_username'] ?? $_POST['database_username'] ?? ''; ?>"
+                            value="{{ _SESSION['database_username'] ?? _POST['database_username'] }}"
                             required
                     >
                 </div>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="form-group row">
-            <h6 class="col-sm-3"><?= _lang("database_password"); ?>: </h6>
+            <h6 class="col-sm-3">{{  _lang("database_password") }} : </h6>
             <div class="col-sm-8">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -74,14 +74,14 @@
                             name="database_password"
                             class="form-control"
                             placeholder=""
-                            value="<?= $_SESSION['database_password'] ?? $_POST['database_password'] ?? ''; ?>"
+                            value="{{ _SESSION['database_password'] ?? _POST['database_password'] }}"
                     >
                 </div>
             </div>
         </div>
 
         <div class="form-group row">
-            <h6 class="col-sm-3"><?= _lang("table_prefix"); ?>: </h6>
+            <h6 class="col-sm-3">{{  _lang("table_prefix") }} : </h6>
             <div class="col-sm-8">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -92,27 +92,27 @@
                             name="table_prefix"
                             class="form-control"
                             placeholder="security_"
-                            value="<?= $_SESSION['table_prefix'] ?? $_POST['table_prefix'] ?? ''; ?>"
+                            value="{{ _SESSION['table_prefix'] ?? _POST['table_prefix'] }}"
                     >
                 </div>
             </div>
         </div>
 
-        <?php if (isset($alert_message)) : ?>
-        <br/>
-        <div class="alert alert-danger">
-            <?= $alert_message ?>
-        </div>
-        <?php endif; ?>
+        {% if alert_message %}
+            <br/>
+            <div class="alert alert-danger">
+                {{ alert_message }}
+            </div>
+        {% endif %}
 
         <div class="card-footer">
             <div class="row">
                 <center>
                     <a href="?step=language" class="btn-secondary btn">
                         <i class="fas fa-arrow-circle-left"></i>
-                        <?= _lang("back"); ?>
+                        {{  _lang("back") }}
                     </a>
-                    <input class="btn-primary btn" type="submit" name="submit" value="<?= _lang("next"); ?>"/>
+                    <input class="btn-primary btn" type="submit" name="submit" value="{{  _lang("next") }}"/>
                 </center>
             </div>
         </div>
