[Update] extending done.twig to layout.twig

--- a/v2/install/steps/done.twig
+++ b/v2/install/steps/done.twig
@@ -1,3 +1,5 @@
+{% extends 'layout.twig' %}
+
 {% block content %}
     <center>
         <div class="alert alert-success">{{ _lang("success_install") }}</div>
