[Update] extending language.twig to layout.twig

--- a/v2/install/steps/language.twig
+++ b/v2/install/steps/language.twig
@@ -1,3 +1,5 @@
+{% extends 'layout.twig' %}
+
 {% block content %}
     <center>
         <center><h6>{{  _lang("choose_language") }}: </h6></center>
