[Update]  update the view and set link

--- a/v2/views/includes/sidebar.twig
+++ b/v2/views/includes/sidebar.twig
@@ -268,7 +268,7 @@
 
                 <li class="nav-header">TOOLS</li>
                 <li class="nav-item {{ page.active == 'portScanner' ? 'active' : '' }}">
-                    <a href="port-scanner.php" class="nav-link {{ page.active == 'portScanner' ? 'active' : '' }}">
+                    <a href="{{ path('portScanner') }}" class="nav-link {{ page.active == 'portScanner' ? 'active' : '' }}">
                         <i class="fas fa-search"></i>&nbsp; <p>Port Scanner</p>
                     </a>
                 </li>
