[New] create befree dashboard controllers

--- a/v2/views/includes/sidebar.twig
+++ b/v2/views/includes/sidebar.twig
@@ -274,7 +274,7 @@
                 </li>
 
                 <li class="nav-item {{ page.active == 'htaccessEditor' ? 'active' : '' }}">
-                    <a href="htaccess-editor.php" class="nav-link {{ page.active == 'htaccessEditor' ? 'active' : '' }}">
+                    <a href="{{ path('htaccessEditor') }}" class="nav-link {{ page.active == 'htaccessEditor' ? 'active' : '' }}">
                         <i class="fas fa-columns"></i>&nbsp; <p>.htacces Editor</p>
                     </a>
                 </li>
